//----------------------------------------------------------------------------
//  Filename:       idoService.proto
//  Revised:        $Date$
//  Revision:       $Revision$

enum updataServiceSysId
{
	RPC_SYS_PB_UPDATA = 60;
}

//Command IDs - each of these are associated with Request, Responses, Indications, and Confirm messages
enum UpdataGateway_CmdIds 
{
  UPDATA_GATEWAY_REQ = 0;//发送更新网关程序请求
  UPDATA_GATEWAY_IND = 1;//返回更新网关程序
  
}

message Updata_gateway_req
{
  required UpdataGateway_CmdIds cmdId = 1 [default = UPDATA_GATEWAY_REQ];  // don't change this field
  optional uint32 type = 2;// type 为0时 表示要更新 ；1表示 重启
}
message Updata_gateway_ind
{
  required UpdataGateway_CmdIds cmdId = 1 [default = UPDATA_GATEWAY_IND];  // don't change this field
  optional uint32 status = 2;// type 为0确认 ；1响应
}
